k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asocijacije
  labels:
    app: asocijacije
    environment: production
